globus-gram-protocol (12.1-1+gt6.@distro@) @distro@; urgency=low

  * Dependency

 -- Globus Toolkit <support@globus.org>  Mon, 03 Feb 2014 11:40:47 -0500

globus-gram-protocol (12.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 20:49:41 -0500

globus-gram-protocol (11.3-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-gram-protocol (11.3-1) unstable; urgency=low

  * RIC-226: Some dependencies are missing in GPT metadata

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:14 -0500

globus-gram-protocol (11.2-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-gram-protocol (11.2-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-gram-protocol (11.2-0) unstable; urgency=low

  * Update for 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 22 Nov 2011 09:42:11 -0500

globus-gram-protocol (11.1-0) unstable; urgency=low

  * fix library soname dependencies when soname is 0

 -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 11:05:13 -0400

globus-gram-protocol (11.1-0) unstable; urgency=low

  * fix libdir in perl initializer

 -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 10:20:30 -0400

globus-gram-protocol (11.1-0) unstable; urgency=low

  * Update to 5.1.2

 -- Globus Toolkit <support@globus.org>  Thu, 27 Oct 2011 10:13:10 -0400

globus-gram-protocol (10.0-0GT5.1.2a) unstable; urgency=low

  * Non-maintainer upload.

 -- Globus Support <support@globus.org>  Fri, 29 Jul 2011 14:54:17 -0400

globus-gram-protocol (9.7-2) unstable; urgency=low

  * Converting to package format 3.0 (quilt)
  * Add new build dependency on texlive-font-utils due to changes in texlive