@@ -1,3 +1,9 @@
+globus-gram-protocol (12.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test credentials permissions
+
+ -- Globus Toolkit <support@globus.org>  Mon, 03 Feb 2014 14:41:52 -0500
+
 globus-gram-protocol (12.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Dependency
